RESOLVED FIXED313347
Fix imported/w3c/web-platform-tests/css/css-sizing/aspect-ratio/block-aspect-ratio-042.html -043.html
https://bugs.webkit.org/show_bug.cgi?id=313347
Summary Fix imported/w3c/web-platform-tests/css/css-sizing/aspect-ratio/block-aspect-...
alan
Reported 2026-04-26 06:37:24 PDT
ssia
Attachments
[fast-cq]Patch (3.66 KB, patch)
2026-04-26 06:44 PDT, alan
no flags
alan
Comment 1 2026-04-26 06:44:52 PDT
Created attachment 479307 [details] [fast-cq]Patch
EWS
Comment 2 2026-04-27 05:20:07 PDT
Committed 312084@main (2d2f2020a21f): <https://commits.webkit.org/312084@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 479307 [details].
Radar WebKit Bug Importer
Comment 3 2026-04-27 05:21:12 PDT
Note You need to log in before you can comment on or make changes to this bug.